// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hidden if dismissed 1`] = `
<div
  className="AnalyticsNudge"
>
  <span>
    Got it, we won't send any data about your usage.
  </span>
</div>
`;

exports[`hides nudge if !needsNudge and no state 1`] = `
<div
  className="AnalyticsNudge"
>
  <div>
    <span>
      Welcome to Tilt! To better support you, may we record anonymized data about your usage? (
      <a
        href="https://github.com/windmilleng/tilt#telemetry-and-privacy"
        target="_blank"
      >
        read more
      </a>
      .) 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        onClick={[Function]}
      >
        No
      </button>
    </span>
  </div>
</div>
`;

exports[`shows failure message with response body 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <div>
    <span>
      Oh no, something went wrong! Request failed with:
      <div
        className="AnalyticsNudge-err"
      >
        <span>
          something is not right! something is quite wrong!
        </span>
      </div>
      <a
        href="https://tilt.dev/contact"
        target="_blank"
      >
        Contact us
      </a>
      . 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Dismiss
      </button>
    </span>
  </div>
</div>
`;

exports[`shows nudge if needsNudge 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <div>
    <span>
      Welcome to Tilt! To better support you, may we record anonymized data about your usage? (
      <a
        href="https://github.com/windmilleng/tilt#telemetry-and-privacy"
        target="_blank"
      >
        read more
      </a>
      .) 
    </span>
    <span
      className="AnalyticsNudge-buttons"
    >
      <button
        onClick={[Function]}
      >
        Yes
      </button>
      <button
        onClick={[Function]}
      >
        No
      </button>
    </span>
  </div>
</div>
`;

exports[`shows request-in-progress message 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <span>
    Okay, making it so...
  </span>
</div>
`;

exports[`shows success message: opt in 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <span>
    Thanks for opting in: you're helping us make Tilt a better experience for you and for all of our users!
  </span>
</div>
`;

exports[`shows success message: opt out 1`] = `
<div
  className="AnalyticsNudge is-visible"
>
  <span>
    Got it, we won't send any data about your usage.
  </span>
</div>
`;
